--- a/src/results/alfred/P-001--P-002--P-004--P-005--P-006/gpt-4.1-mini/tasks/extracted_use_case_tasks/Extracted_tasks_for_P-005.json
+++ b/src/results/alfred/P-001--P-002--P-004--P-005--P-006/gpt-4.1-mini/tasks/extracted_use_case_tasks/Extracted_tasks_for_P-005.json
@@ -1,116 +1,74 @@
 [
   {
-    "taskID": "TASK-050",
-    "useCaseId": "UC-003",
+    "taskID": "TASK-008",
+    "useCaseId": "UC-001",
     "personaId": "P-005",
-    "taskDescription": "Asks ALFRED to show light meal suggestions for the day"
+    "taskDescription": "Uses push-to-talk mode to control when ALFRED listens"
   },
   {
-    "taskID": "TASK-051",
-    "useCaseId": "UC-003",
+    "taskID": "TASK-013",
+    "useCaseId": "UC-001",
     "personaId": "P-005",
-    "taskDescription": "Reviews simple beverage-based meal options from ALFRED"
+    "taskDescription": "Prefers health check-ins in her own home over hospital settings"
   },
   {
-    "taskID": "TASK-052",
-    "useCaseId": "UC-003",
+    "taskID": "TASK-017",
+    "useCaseId": "UC-001",
     "personaId": "P-005",
-    "taskDescription": "Declines gentle exercise prompts offered by ALFRED"
+    "taskDescription": "Feels cautious but somewhat secure with health monitoring"
   },
   {
-    "taskID": "TASK-053",
-    "useCaseId": "UC-003",
-    "personaId": "P-005",
-    "taskDescription": "Confirms to ALFRED that she has drunk her herbal tea"
-  },
-  {
-    "taskID": "TASK-058",
-    "useCaseId": "UC-003",
-    "personaId": "P-005",
-    "taskDescription": "Avoids engaging in activities she finds unnecessary or challenging"
-  },
-  {
-    "taskID": "TASK-070",
-    "useCaseId": "UC-004",
-    "personaId": "P-005",
-    "taskDescription": "Presses the push-to-talk button to start interaction with ALFRED"
-  },
-  {
-    "taskID": "TASK-071",
-    "useCaseId": "UC-004",
-    "personaId": "P-005",
-    "taskDescription": "Asks ALFRED about her daily schedule"
-  },
-  {
-    "taskID": "TASK-072",
-    "useCaseId": "UC-004",
-    "personaId": "P-005",
-    "taskDescription": "Requests simple information like the weather"
-  },
-  {
-    "taskID": "TASK-073",
-    "useCaseId": "UC-004",
-    "personaId": "P-005",
-    "taskDescription": "Asks ALFRED to remind her to drink herbal tea"
-  },
-  {
-    "taskID": "TASK-093",
+    "taskID": "TASK-112",
     "useCaseId": "UC-005",
     "personaId": "P-005",
-    "taskDescription": "Chooses to stay offline during group video calls"
+    "taskDescription": "Control when and how to interact with ALFRED"
   },
   {
-    "taskID": "TASK-126",
-    "useCaseId": "UC-007",
+    "taskID": "TASK-116",
+    "useCaseId": "UC-005",
     "personaId": "P-005",
-    "taskDescription": "Requests ALFRED to report her vital signs on demand"
+    "taskDescription": "Maintain privacy and autonomy over therapy participation"
   },
   {
-    "taskID": "TASK-235",
-    "useCaseId": "UC-011",
+    "taskID": "TASK-140",
+    "useCaseId": "UC-006",
     "personaId": "P-005",
-    "taskDescription": "Requests ALFRED to remind her only when she asks"
+    "taskDescription": "Dismisses unsolicited notifications about social activities"
   },
   {
-    "taskID": "TASK-250",
+    "taskID": "TASK-221",
+    "useCaseId": "UC-009",
+    "personaId": "P-005",
+    "taskDescription": "Sets medication reminders through ALFRED"
+  },
+  {
+    "taskID": "TASK-304",
     "useCaseId": "UC-012",
     "personaId": "P-005",
-    "taskDescription": "Use voice commands to request medication reminders from ALFRED"
+    "taskDescription": "Uses formal and concise speech when interacting with ALFRED"
   },
   {
-    "taskID": "TASK-251",
+    "taskID": "TASK-311",
     "useCaseId": "UC-012",
     "personaId": "P-005",
-    "taskDescription": "Control when to hear reminders by pressing push-to-talk button"
+    "taskDescription": "Feels uneasy about technology and prefers to keep her privacy intact"
   },
   {
-    "taskID": "TASK-254",
-    "useCaseId": "UC-012",
+    "taskID": "TASK-333",
+    "useCaseId": "UC-013",
     "personaId": "P-005",
-    "taskDescription": "Dismiss detailed explanations about system features"
+    "taskDescription": "Responds curtly to medication reminders from ALFRED"
   },
   {
-    "taskID": "TASK-298",
-    "useCaseId": "UC-014",
+    "taskID": "TASK-357",
+    "useCaseId": "UC-015",
     "personaId": "P-005",
-    "taskDescription": "Request ALFRED to keep explanations simple and avoid interruptions"
+    "taskDescription": "Disables spontaneous voice prompts on ALFRED"
   },
   {
-    "taskID": "TASK-305",
-    "useCaseId": "UC-014",
+    "taskID": "TASK-365",
+    "useCaseId": "UC-015",
     "personaId": "P-005",
-    "taskDescription": "Choose to arrange nurse check-ins offline rather than via video calls"
-  },
-  {
-    "taskID": "TASK-307",
-    "useCaseId": "UC-014",
-    "personaId": "P-005",
-    "taskDescription": "Limit engagement with ALFRED to essential functions only"
-  },
-  {
-    "taskID": "TASK-308",
-    "useCaseId": "UC-014",
-    "personaId": "P-005",
-    "taskDescription": "Maintain controlled communication and avoid spontaneous interactions"
+    "taskDescription": "Maintains control over communication and contact preferences"
   }
 ]
