--- a/src/results/alfred/P-001--P-002--P-004--P-005--P-006/gpt-4.1-mini/tasks/extracted_use_case_tasks/Extracted_tasks_for_P-002.json
+++ b/src/results/alfred/P-001--P-002--P-004--P-005--P-006/gpt-4.1-mini/tasks/extracted_use_case_tasks/Extracted_tasks_for_P-002.json
@@ -1,212 +1,212 @@
 [
   {
-    "taskID": "TASK-026",
-    "useCaseId": "UC-002",
-    "personaId": "P-002",
-    "taskDescription": "Ask ALFRED to start her daily cognitive challenge session"
-  },
-  {
-    "taskID": "TASK-029",
-    "useCaseId": "UC-002",
-    "personaId": "P-002",
-    "taskDescription": "Engage actively with interactive memory puzzles"
-  },
-  {
-    "taskID": "TASK-030",
-    "useCaseId": "UC-002",
-    "personaId": "P-002",
-    "taskDescription": "Chat casually with Sarah through ALFRED’s interface during sessions"
-  },
-  {
     "taskID": "TASK-033",
     "useCaseId": "UC-002",
     "personaId": "P-002",
-    "taskDescription": "Hesitate to confront Mike about her disappointment"
+    "taskDescription": "Activates ALFRED to explore new features"
   },
   {
-    "taskID": "TASK-097",
-    "useCaseId": "UC-005",
+    "taskID": "TASK-067",
+    "useCaseId": "UC-003",
     "personaId": "P-002",
-    "taskDescription": "Starts cognitive stimulation sessions with ALFRED eagerly"
+    "taskDescription": "Share health data openly with her informal caregiver Sarah"
   },
   {
-    "taskID": "TASK-100",
-    "useCaseId": "UC-005",
+    "taskID": "TASK-068",
+    "useCaseId": "UC-003",
     "personaId": "P-002",
-    "taskDescription": "Engages with physical simulations that combine mind and body activities"
+    "taskDescription": "Set cautious limits on medical staff’s access to her health data"
   },
   {
-    "taskID": "TASK-102",
-    "useCaseId": "UC-005",
+    "taskID": "TASK-070",
+    "useCaseId": "UC-003",
     "personaId": "P-002",
-    "taskDescription": "Participates actively in social features, sharing progress with friends and strangers"
+    "taskDescription": "Respond positively to video calls encouraging exercise participation"
   },
   {
-    "taskID": "TASK-105",
-    "useCaseId": "UC-005",
+    "taskID": "TASK-071",
+    "useCaseId": "UC-003",
     "personaId": "P-002",
-    "taskDescription": "Joins community volunteer group video calls and shares experiences"
+    "taskDescription": "Enjoy the freedom and independence enabled by ALFRED"
   },
   {
-    "taskID": "TASK-107",
-    "useCaseId": "UC-005",
+    "taskID": "TASK-072",
+    "useCaseId": "UC-003",
     "personaId": "P-002",
-    "taskDescription": "Feels energized and connected by using ALFRED’s interactive environment"
+    "taskDescription": "Value privacy outside of hospital contexts"
   },
   {
-    "taskID": "TASK-149",
-    "useCaseId": "UC-007",
+    "taskID": "TASK-073",
+    "useCaseId": "UC-003",
     "personaId": "P-002",
-    "taskDescription": "May desire personalized guidance to interact naturally with ALFRED"
+    "taskDescription": "Use ALFRED to maintain social connections and emotional engagement"
   },
   {
-    "taskID": "TASK-154",
-    "useCaseId": "UC-007",
+    "taskID": "TASK-086",
+    "useCaseId": "UC-004",
     "personaId": "P-002",
-    "taskDescription": "Would benefit from social inclusion features to reduce isolation"
+    "taskDescription": "Use ALFRED as a supportive companion for staying active and socially connected"
   },
   {
-    "taskID": "TASK-155",
-    "useCaseId": "UC-007",
+    "taskID": "TASK-088",
+    "useCaseId": "UC-004",
     "personaId": "P-002",
-    "taskDescription": "Interested in cognitive and physical activity support from ALFRED"
+    "taskDescription": "Enjoy the presence of ALFRED throughout the day"
   },
   {
-    "taskID": "TASK-169",
-    "useCaseId": "UC-008",
+    "taskID": "TASK-090",
+    "useCaseId": "UC-004",
     "personaId": "P-002",
-    "taskDescription": "Use the hydration reminder app to improve personal health"
+    "taskDescription": "Value autonomy and continuous connection provided by ALFRED"
   },
   {
     "taskID": "TASK-171",
-    "useCaseId": "UC-008",
+    "useCaseId": "UC-007",
     "personaId": "P-002",
-    "taskDescription": "Respond to persistent voice reminders even during conversations"
+    "taskDescription": "Interact with ALFRED using voice commands to perform daily activities"
   },
   {
-    "taskID": "TASK-172",
-    "useCaseId": "UC-008",
+    "taskID": "TASK-174",
+    "useCaseId": "UC-007",
     "personaId": "P-002",
-    "taskDescription": "Enable full integration of personal sensor data for health monitoring"
+    "taskDescription": "Respond to persistent reminders for exercises and health checks"
   },
   {
-    "taskID": "TASK-178",
-    "useCaseId": "UC-009",
+    "taskID": "TASK-177",
+    "useCaseId": "UC-007",
     "personaId": "P-002",
-    "taskDescription": "Asks ALFRED who is available for a quick video chat"
+    "taskDescription": "Experience guilt when caregivers receive notifications late at night"
   },
   {
-    "taskID": "TASK-179",
-    "useCaseId": "UC-009",
-    "personaId": "P-002",
-    "taskDescription": "Chooses to talk with family members or acquaintances from the community group"
-  },
-  {
-    "taskID": "TASK-180",
-    "useCaseId": "UC-009",
-    "personaId": "P-002",
-    "taskDescription": "Requests ALFRED to adjust the camera angle automatically to rest her hands"
-  },
-  {
-    "taskID": "TASK-181",
-    "useCaseId": "UC-009",
-    "personaId": "P-002",
-    "taskDescription": "Engages in informal and spontaneous video calls without a strict agenda"
-  },
-  {
-    "taskID": "TASK-182",
-    "useCaseId": "UC-009",
-    "personaId": "P-002",
-    "taskDescription": "Responds to ALFRED's reminders about hydration and exercise goals"
-  },
-  {
-    "taskID": "TASK-186",
-    "useCaseId": "UC-009",
-    "personaId": "P-002",
-    "taskDescription": "Responds to family concerns about spending too much time on video chats"
-  },
-  {
-    "taskID": "TASK-188",
-    "useCaseId": "UC-009",
-    "personaId": "P-002",
-    "taskDescription": "Feels supported by ALFRED’s ability to adapt to her mobility limitations"
-  },
-  {
-    "taskID": "TASK-189",
-    "useCaseId": "UC-009",
-    "personaId": "P-002",
-    "taskDescription": "Appreciates ALFRED's respect for her requests to control social invitations"
-  },
-  {
-    "taskID": "TASK-190",
-    "useCaseId": "UC-009",
-    "personaId": "P-002",
-    "taskDescription": "Wants to maintain independence while feeling connected and cared for"
-  },
-  {
-    "taskID": "TASK-220",
+    "taskID": "TASK-274",
     "useCaseId": "UC-011",
     "personaId": "P-002",
-    "taskDescription": "Asks ALFRED about the health agenda for the day"
+    "taskDescription": "Accepts voice reminders from ALFRED to start physical and cognitive exercises"
   },
   {
-    "taskID": "TASK-223",
+    "taskID": "TASK-275",
     "useCaseId": "UC-011",
     "personaId": "P-002",
-    "taskDescription": "Requests ALFRED to explain game rules in detail"
+    "taskDescription": "Follows challenging workout prompts given by ALFRED"
   },
   {
-    "taskID": "TASK-224",
+    "taskID": "TASK-277",
     "useCaseId": "UC-011",
     "personaId": "P-002",
-    "taskDescription": "Welcomes spontaneous hydration reminders from ALFRED"
+    "taskDescription": "Feels motivated by the system pushing her to improve her health"
   },
   {
-    "taskID": "TASK-227",
+    "taskID": "TASK-278",
     "useCaseId": "UC-011",
     "personaId": "P-002",
-    "taskDescription": "Invites a friend to join an online exercise session via ALFRED"
+    "taskDescription": "Experiences mixed feelings about losing some control over exercise scheduling"
   },
   {
-    "taskID": "TASK-229",
+    "taskID": "TASK-279",
     "useCaseId": "UC-011",
     "personaId": "P-002",
-    "taskDescription": "Embraces proactive coaching and open engagement from ALFRED"
+    "taskDescription": "Enjoys the social engagement features to reduce loneliness"
   },
   {
-    "taskID": "TASK-284",
-    "useCaseId": "UC-013",
+    "taskID": "TASK-280",
+    "useCaseId": "UC-011",
     "personaId": "P-002",
-    "taskDescription": "Balances enjoyment of system prompts with social interaction needs"
+    "taskDescription": "Responds happily to ALFRED’s exercise prompts"
   },
   {
-    "taskID": "TASK-287",
+    "taskID": "TASK-281",
+    "useCaseId": "UC-011",
+    "personaId": "P-002",
+    "taskDescription": "Reflects briefly on the system’s insistence on forcing activities even when wanting rest"
+  },
+  {
+    "taskID": "TASK-342",
     "useCaseId": "UC-014",
     "personaId": "P-002",
-    "taskDescription": "Follow ALFRED's voice guidance through setup and feature use"
+    "taskDescription": "Tells ALFRED to start the health check-in"
   },
   {
-    "taskID": "TASK-288",
+    "taskID": "TASK-343",
     "useCaseId": "UC-014",
     "personaId": "P-002",
-    "taskDescription": "Accept suggestions to connect wearable health sensors"
+    "taskDescription": "Wears wearable devices to track vital signs"
   },
   {
-    "taskID": "TASK-291",
+    "taskID": "TASK-344",
     "useCaseId": "UC-014",
     "personaId": "P-002",
-    "taskDescription": "Ask ALFRED to slow down explanations or pause notifications during calls"
+    "taskDescription": "Chooses to postpone challenging exercises after health check-in"
   },
   {
-    "taskID": "TASK-294",
+    "taskID": "TASK-345",
     "useCaseId": "UC-014",
     "personaId": "P-002",
-    "taskDescription": "Adjust ALFRED's behavior to balance learning and social moments"
+    "taskDescription": "Asks ALFRED detailed questions about heart rate trends"
   },
   {
-    "taskID": "TASK-296",
+    "taskID": "TASK-346",
     "useCaseId": "UC-014",
     "personaId": "P-002",
-    "taskDescription": "Overcome mild mobility difficulties to operate the device"
+    "taskDescription": "Requests explanations about health data in a clear way"
+  },
+  {
+    "taskID": "TASK-347",
+    "useCaseId": "UC-014",
+    "personaId": "P-002",
+    "taskDescription": "Lets ALFRED activate automatically if health condition changes suddenly"
+  },
+  {
+    "taskID": "TASK-348",
+    "useCaseId": "UC-014",
+    "personaId": "P-002",
+    "taskDescription": "Uses ALFRED to make a video call with her daughter"
+  },
+  {
+    "taskID": "TASK-349",
+    "useCaseId": "UC-014",
+    "personaId": "P-002",
+    "taskDescription": "Shares her health progress during video calls"
+  },
+  {
+    "taskID": "TASK-350",
+    "useCaseId": "UC-014",
+    "personaId": "P-002",
+    "taskDescription": "Negotiates with ALFRED to set reminders for healthcare appointments"
+  },
+  {
+    "taskID": "TASK-351",
+    "useCaseId": "UC-014",
+    "personaId": "P-002",
+    "taskDescription": "Balances between accepting ALFRED's support and keeping personal freedom"
+  },
+  {
+    "taskID": "TASK-352",
+    "useCaseId": "UC-014",
+    "personaId": "P-002",
+    "taskDescription": "Feels curious about managing her health better with ALFRED’s help"
+  },
+  {
+    "taskID": "TASK-353",
+    "useCaseId": "UC-014",
+    "personaId": "P-002",
+    "taskDescription": "Wants ALFRED to respect her choices and not be too pushy"
+  },
+  {
+    "taskID": "TASK-354",
+    "useCaseId": "UC-014",
+    "personaId": "P-002",
+    "taskDescription": "Feels concerned about becoming too dependent on ALFRED’s prompts"
+  },
+  {
+    "taskID": "TASK-355",
+    "useCaseId": "UC-014",
+    "personaId": "P-002",
+    "taskDescription": "Appreciates natural and easy communication with ALFRED"
+  },
+  {
+    "taskID": "TASK-356",
+    "useCaseId": "UC-014",
+    "personaId": "P-002",
+    "taskDescription": "Prefers flexible timing for receiving support and reminders"
   }
 ]
