--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
         with:
           lfs: true      # ensure Git-LFS files are fetched
       - name: 🤗 Sync to Space
-        uses: HuggingFace/push-to-hub-action@main
+        uses: huggingface/hub-push-action@v1
         with:
           repo_id: cos40006/persona_conflict_detection
           repo_type: space
-          token: ${{ secrets.HF_TOKEN }}   # store your PAT as a GitHub Secret
+          token: ${{ secrets.HF_TOKEN }}
